--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ secrets.yaml
 secret.yaml
 *-secret.yaml
 *-secrets.yaml
+secrets/envs/**/githubAppPrivateKey
+secrets/envs/**/cloudflare-api-token
 
 # Helm
 *.tgz
