--- a/secrets/kustomization.yaml
+++ b/secrets/kustomization.yaml
@@ -1,11 +1,21 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+resources:
+  - namespaces.yaml
+
 secretGenerator:
   - name: cloudflare-api-token-secret
     namespace: cert-manager
     envs:
       - ./envs/cloudflare/.env
+    options:
+      disableNameSuffixHash: true
+
+  - name: cloudflare-api-token-secret
+    namespace: external-dns
+    envs:
+      - ./envs/external-dns/.env
     options:
       disableNameSuffixHash: true
 
