--- a/gitops/envs/prod/portfolio/application.yaml
+++ b/gitops/envs/prod/portfolio/application.yaml
@@ -22,11 +22,23 @@ spec:
         #Deployment
         image:
           repository: ghcr.io/lkgiovani/lkgiovani-portfolio
-          tag: "latest"
+          tag: "v1.0.0"
         service:
           port: 3000
-        livenessProbe: null
-        readinessProbe: null
+        livenessProbe:
+          httpGet:
+            path: /
+            port: http
+          initialDelaySeconds: 10
+          periodSeconds: 15
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /
+            port: http
+          initialDelaySeconds: 5
+          periodSeconds: 10
+          failureThreshold: 3
 
         #Autoscaling
         autoscaling:
