--- a/secrets/namespaces.yaml
+++ b/secrets/namespaces.yaml
@@ -12,3 +12,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: argocd
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: prod
+  labels:
+    environment: production
